<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/main_tab_title_2"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorAccent"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/main_floatingMasterView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:background="@drawable/button_thinstyle"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/main_floatingMasterText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="@string/main_floating_master_off"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"/>
                <Switch
                    android:id="@+id/main_floatingMasterSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:track="@drawable/switch_track_selector"
                    android:thumb="@drawable/switch_thumb_selector"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_floatingModeSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/main_floating_section_mode"
                    android:textSize="14sp"
                    android:textColor="@color/colorAccent"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_floatingModeView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="4dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/main_floatingModeMove"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:background="@drawable/button_thinstyle"
                    android:text="@string/main_floating_mode_move"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent" />
                <TextView
                    android:id="@+id/main_floatingModeFixed"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:background="@drawable/button_thinstyle"
                    android:text="@string/main_floating_mode_fixed"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
            <TextView
                android:id="@+id/main_floatingModeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/main_floating_section_design"
                    android:textSize="14sp"
                    android:textColor="@color/colorAccent"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="4dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/main_floatingDesignBox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:background="@drawable/button_thinstyle"
                    android:text="@string/main_floating_design_box"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent" />
                <TextView
                    android:id="@+id/main_floatingDesignImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:background="@drawable/button_thinstyle"
                    android:text="@string/main_floating_design_image"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent" />
                <TextView
                    android:id="@+id/main_floatingDesignText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:background="@drawable/button_thinstyle"
                    android:text="@string/main_floating_design_text"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent" />
                <TextView
                    android:id="@+id/main_floatingDesignMinimal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:background="@drawable/button_thinstyle"
                    android:text="@string/main_floating_design_minimal"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_floatingColorView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:background="@drawable/button_thinstyle"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/main_floatingColorText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="@string/main_floating_design_color_off"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent"/>
                <Switch
                    android:id="@+id/main_floatingColorSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:track="@drawable/switch_track_selector"
                    android:thumb="@drawable/switch_thumb_selector"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/main_floating_section_size"
                    android:textSize="14sp"
                    android:textColor="@color/colorAccent"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="vertical">
                <SeekBar
                    android:id="@+id/main_floatingSizeSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:max="10"
                    android:progress="0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/main_floating_section_setting"
                    android:textSize="14sp"
                    android:textColor="@color/colorAccent"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_floatingBootView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:background="@drawable/button_thinstyle"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/main_floatingBootText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="@string/main_floating_boot_off"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent"/>
                <Switch
                    android:id="@+id/main_floatingBootSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:track="@drawable/switch_track_selector"
                    android:thumb="@drawable/switch_thumb_selector"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>